# xstatic-lodash

./: setup.cfg
xstatic/pkg/lodash/: __init__.py
