[metadata]
name = XStatic-Lodash
description = JavaScript utility library delivering modularity, performance, & extras (XStatic packaging standard)
description-file = README.rst
maintainer = Radomir Dopieralski
maintainer-email = openstack@sheep.art.pl
home-page = https://github.com/lodash/lodash
keywords = lodash xstatic
license = BSD
zip_safe = False
namespace_packages =
    xstatic
    xstatic.pkg

[files]
packages =
    xstatic

[bdist_wheel]
universal = True
